// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login /> interactions phoneNumber field should be present if mobile phone verification is on 1`] = `
<div>
  <div
    class="container content"
    id="login"
  >
    <div
      class="inner"
    >
      <form
        aria-label="Login form"
        class="main-column"
      >
        <div
          class="inner"
        >
          <div
            class="social-links row"
          />
          <div
            class="fieldset"
          >
            <div
              class="row phone-number"
            >
              <label
                for="username"
              >
                Mobile phone number
              </label>
              <div
                class=" react-tel-input "
              >
                <div
                  class="special-label"
                >
                  Phone
                </div>
                <input
                  autocomplete="tel"
                  class="form-control input "
                  id="username"
                  name="username"
                  placeholder="enter mobile phone number"
                  required=""
                  type="tel"
                  value="+91"
                />
                <div
                  class="flag-dropdown "
                >
                  <div
                    aria-haspopup="listbox"
                    class="selected-flag"
                    role="button"
                    tabindex="0"
                    title="India: + 91"
                  >
                    <div
                      class="flag in"
                    >
                      <div
                        class="arrow"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row password"
            >
              <label
                for="password"
              >
                Password
              </label>
              <input
                autocomplete="current-password"
                class="input "
                id="password"
                name="password"
                pattern=".{6,}"
                placeholder="password"
                required=""
                title="password must be a minimum of 6 characters"
                type="password"
                value=""
              />
              <div
                class=""
                data-testid="password-toggle-icon"
                role="button"
                tabindex="0"
              >
                <i
                  class="eye"
                  title="reveal password"
                />
              </div>
            </div>
            <div
              class="row remember-me"
            >
              <input
                checked=""
                id="rememberMe"
                name="rememberMe"
                type="checkbox"
              />
              <label
                for="rememberMe"
              >
                remember me on this device
              </label>
            </div>
          </div>
          <div
            class="row login"
          >
            <input
              class="button full"
              type="submit"
              value="Log in"
            />
          </div>
          <div
            class="row register"
          >
            <p>
              Not registered yet?
            </p>
            <a
              class="button full"
              href="/default/registration"
            >
              Sign up
            </a>
          </div>
        </div>
      </form>
      <div
        class="side-column contact"
      >
        <div
          class="inner"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Login /> interactions should not show phoneNumber field if auto_switch_phone_input is false 1`] = `
<div>
  <div
    class="container content"
    id="login"
  >
    <div
      class="inner"
    >
      <form
        aria-label="Login form"
        class="main-column"
      >
        <div
          class="inner"
        >
          <div
            class="social-links row"
          />
          <div
            class="fieldset"
          >
            <div
              class="row username"
            >
              <label
                for="username"
              >
                Email, phone number or username
              </label>
              <input
                autocomplete="username"
                class="input "
                id="username"
                name="username"
                pattern="^[a-zA-Z0-9@.+\\-_\\s]+$"
                placeholder="enter email, phone number or username"
                required=""
                title="enter valid email address, an username or a phone number"
                type="text"
                value=""
              />
            </div>
            <div
              class="row password"
            >
              <label
                for="password"
              >
                Password
              </label>
              <input
                autocomplete="current-password"
                class="input "
                id="password"
                name="password"
                pattern=".{6,}"
                placeholder="password"
                required=""
                title="password must be a minimum of 6 characters"
                type="password"
                value=""
              />
              <div
                class=""
                data-testid="password-toggle-icon"
                role="button"
                tabindex="0"
              >
                <i
                  class="eye"
                  title="reveal password"
                />
              </div>
            </div>
            <div
              class="row remember-me"
            >
              <input
                checked=""
                id="rememberMe"
                name="rememberMe"
                type="checkbox"
              />
              <label
                for="rememberMe"
              >
                remember me on this device
              </label>
            </div>
          </div>
          <div
            class="row login"
          >
            <input
              class="button full"
              type="submit"
              value="Log in"
            />
          </div>
          <div
            class="row register"
          >
            <p>
              Not registered yet?
            </p>
            <a
              class="button full"
              href="/default/registration"
            >
              Sign up
            </a>
          </div>
        </div>
      </form>
      <div
        class="side-column contact"
      >
        <div
          class="inner"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Login /> interactions username should be text field if mobile phone verification is off 1`] = `
<div>
  <div
    class="container content"
    id="login"
  >
    <div
      class="inner"
    >
      <form
        aria-label="Login form"
        class="main-column"
      >
        <div
          class="inner"
        >
          <div
            class="social-links row"
          />
          <div
            class="fieldset"
          >
            <div
              class="row username"
            >
              <label
                for="username"
              >
                Email, phone number or username
              </label>
              <input
                autocomplete="username"
                class="input "
                id="username"
                name="username"
                pattern="^[a-zA-Z0-9@.+\\-_\\s]+$"
                placeholder="enter email, phone number or username"
                required=""
                title="enter valid email address, an username or a phone number"
                type="text"
                value=""
              />
            </div>
            <div
              class="row password"
            >
              <label
                for="password"
              >
                Password
              </label>
              <input
                autocomplete="current-password"
                class="input "
                id="password"
                name="password"
                pattern=".{6,}"
                placeholder="password"
                required=""
                title="password must be a minimum of 6 characters"
                type="password"
                value=""
              />
              <div
                class=""
                data-testid="password-toggle-icon"
                role="button"
                tabindex="0"
              >
                <i
                  class="eye"
                  title="reveal password"
                />
              </div>
            </div>
            <div
              class="row remember-me"
            >
              <input
                checked=""
                id="rememberMe"
                name="rememberMe"
                type="checkbox"
              />
              <label
                for="rememberMe"
              >
                remember me on this device
              </label>
            </div>
          </div>
          <div
            class="row login"
          >
            <input
              class="button full"
              type="submit"
              value="Log in"
            />
          </div>
          <div
            class="row register"
          >
            <p>
              Not registered yet?
            </p>
            <a
              class="button full"
              href="/default/registration"
            >
              Sign up
            </a>
          </div>
        </div>
      </form>
      <div
        class="side-column contact"
      >
        <div
          class="inner"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Login /> rendering should render correctly with social links 1`] = `
<div>
  <div
    class="container content"
    id="login"
  >
    <div
      class="inner"
    >
      <form
        aria-label="Login form"
        class="main-column"
      >
        <div
          class="inner"
        >
          <div
            class="social-links row"
          >
            <p>
              <a
                class="social-link button full"
                href="https://radius.openwisp.io/login/google"
                rel="noopener noreferrer"
              >
                <span
                  class="inner"
                >
                  <img
                    alt="Login with Google"
                    class="icon"
                    src="/assets/default/google.png"
                  />
                  <span
                    class="text"
                  >
                    Login with Google
                  </span>
                </span>
              </a>
            </p>
            <p>
              <a
                class="social-link button full"
                href="https://radius.openwisp.io/login/facebook"
                rel="noopener noreferrer"
              >
                <span
                  class="inner"
                >
                  <img
                    alt="Login with Facebook"
                    class="icon"
                    src="/assets/default/facebook.png"
                  />
                  <span
                    class="text"
                  >
                    Login with Facebook
                  </span>
                </span>
              </a>
            </p>
          </div>
          <div
            class="fieldset"
          >
            <div
              class="row username"
            >
              <label
                for="username"
              >
                USERNAME_LOG_LBL
              </label>
              <input
                autocomplete="username"
                class="input "
                id="username"
                name="username"
                pattern="^[a-zA-Z0-9@.+\\-_\\s]+$"
                placeholder="USERNAME_LOG_PHOLD"
                required=""
                title="USERNAME_LOG_TITL"
                type="text"
                value=""
              />
            </div>
            <div
              class="row password"
            >
              <label
                for="password"
              >
                PWD_LBL
              </label>
              <input
                autocomplete="current-password"
                class="input "
                id="password"
                name="password"
                pattern=".{6,}"
                placeholder="PWD_PHOLD"
                required=""
                title="PWD_PTRN_DESC"
                type="password"
                value=""
              />
              <div
                class=""
                data-testid="password-toggle-icon"
                role="button"
                tabindex="0"
              >
                <i
                  class="eye"
                  title="PWD_REVEAL"
                />
              </div>
            </div>
            <div
              class="row remember-me"
            >
              <input
                checked=""
                id="rememberMe"
                name="rememberMe"
                type="checkbox"
              />
              <label
                for="rememberMe"
              >
                rememberMe
              </label>
            </div>
          </div>
          <div
            class="row login"
          >
            <input
              class="button full"
              type="submit"
              value="LOGIN"
            />
          </div>
          <div
            class="row register"
          >
            <p>
              REGISTER_BTN_LBL
            </p>
            <a
              class="button full"
              href="/default/registration"
            >
              REGISTER_BTN_TXT
            </a>
          </div>
        </div>
      </form>
      <div
        class="side-column contact"
      >
        <div
          class="inner"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Login /> rendering should render correctly without social links 1`] = `
<div>
  <div
    class="container content"
    id="login"
  >
    <div
      class="inner"
    >
      <form
        aria-label="Login form"
        class="main-column"
      >
        <div
          class="inner"
        >
          <div
            class="social-links row"
          />
          <div
            class="fieldset"
          >
            <div
              class="row username"
            >
              <label
                for="username"
              >
                USERNAME_LOG_LBL
              </label>
              <input
                autocomplete="username"
                class="input "
                id="username"
                name="username"
                pattern="^[a-zA-Z0-9@.+\\-_\\s]+$"
                placeholder="USERNAME_LOG_PHOLD"
                required=""
                title="USERNAME_LOG_TITL"
                type="text"
                value=""
              />
            </div>
            <div
              class="row password"
            >
              <label
                for="password"
              >
                PWD_LBL
              </label>
              <input
                autocomplete="current-password"
                class="input "
                id="password"
                name="password"
                pattern=".{6,}"
                placeholder="PWD_PHOLD"
                required=""
                title="PWD_PTRN_DESC"
                type="password"
                value=""
              />
              <div
                class=""
                data-testid="password-toggle-icon"
                role="button"
                tabindex="0"
              >
                <i
                  class="eye"
                  title="PWD_REVEAL"
                />
              </div>
            </div>
            <div
              class="row remember-me"
            >
              <input
                checked=""
                id="rememberMe"
                name="rememberMe"
                type="checkbox"
              />
              <label
                for="rememberMe"
              >
                rememberMe
              </label>
            </div>
          </div>
          <div
            class="row login"
          >
            <input
              class="button full"
              type="submit"
              value="LOGIN"
            />
          </div>
          <div
            class="row register"
          >
            <p>
              REGISTER_BTN_LBL
            </p>
            <a
              class="button full"
              href="/default/registration"
            >
              REGISTER_BTN_TXT
            </a>
          </div>
        </div>
      </form>
      <div
        class="side-column contact"
      >
        <div
          class="inner"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Login /> rendering should render radius realms form if radiusRealms is true 1`] = `
<div>
  <div
    class="container content"
    id="login"
  >
    <div
      class="inner"
    >
      <form
        aria-label="Login form"
        class="main-column"
      >
        <div
          class="inner"
        >
          <div
            class="social-links row"
          />
          <div
            class="fieldset"
          >
            <div
              class="row username"
            >
              <label
                for="username"
              >
                Email, phone number or username
              </label>
              <input
                autocomplete="username"
                class="input "
                id="username"
                name="username"
                pattern="^[a-zA-Z0-9@.+\\-_\\s]+$"
                placeholder="enter email, phone number or username"
                required=""
                title="enter valid email address, an username or a phone number"
                type="text"
                value=""
              />
            </div>
            <div
              class="row password"
            >
              <label
                for="password"
              >
                Password
              </label>
              <input
                autocomplete="current-password"
                class="input "
                id="password"
                name="password"
                pattern=".{6,}"
                placeholder="password"
                required=""
                title="password must be a minimum of 6 characters"
                type="password"
                value=""
              />
              <div
                class=""
                data-testid="password-toggle-icon"
                role="button"
                tabindex="0"
              >
                <i
                  class="eye"
                  title="reveal password"
                />
              </div>
            </div>
            <div
              class="row remember-me"
            >
              <input
                checked=""
                id="rememberMe"
                name="rememberMe"
                type="checkbox"
              />
              <label
                for="rememberMe"
              >
                remember me on this device
              </label>
            </div>
          </div>
          <div
            class="row login"
          >
            <input
              class="button full"
              type="submit"
              value="Log in"
            />
          </div>
          <div
            class="row register"
          >
            <p>
              Not registered yet?
            </p>
            <a
              class="button full"
              href="/default/registration"
            >
              Sign up
            </a>
          </div>
        </div>
      </form>
      <form
        action="https://radius-proxy/login/"
        aria-label="Captive portal login form"
        class="hidden"
        id="cp-login-form"
        method="POST"
      >
        <input
          name="username"
          type="hidden"
          value=""
        />
        <input
          name="password"
          type="hidden"
          value=""
        />
        0
      </form>
      <div
        class="side-column contact"
      >
        <div
          class="inner"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Login /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<div>
  <div
    class="container content"
    id="login"
  >
    <div
      class="inner"
    >
      <form
        aria-label="Login form"
        class="main-column"
      >
        <div
          class="inner"
        >
          <div
            class="social-links row"
          />
          <div
            class="fieldset"
          >
            <div
              class="row username"
            >
              <label
                for="username"
              >
                USERNAME_LOG_LBL
              </label>
              <input
                autocomplete="username"
                class="input "
                id="username"
                name="username"
                pattern="^[a-zA-Z0-9@.+\\-_\\s]+$"
                placeholder="USERNAME_LOG_PHOLD"
                required=""
                title="USERNAME_LOG_TITL"
                type="text"
                value=""
              />
            </div>
            <div
              class="row password"
            >
              <label
                for="password"
              >
                PWD_LBL
              </label>
              <input
                autocomplete="current-password"
                class="input "
                id="password"
                name="password"
                pattern=".{6,}"
                placeholder="PWD_PHOLD"
                required=""
                title="PWD_PTRN_DESC"
                type="password"
                value=""
              />
              <div
                class=""
                data-testid="password-toggle-icon"
                role="button"
                tabindex="0"
              >
                <i
                  class="eye"
                  title="PWD_REVEAL"
                />
              </div>
            </div>
            <div
              class="row remember-me"
            >
              <input
                checked=""
                id="rememberMe"
                name="rememberMe"
                type="checkbox"
              />
              <label
                for="rememberMe"
              >
                rememberMe
              </label>
            </div>
          </div>
          <div
            class="row login"
          >
            <input
              class="button full"
              type="submit"
              value="LOGIN"
            />
          </div>
          <div
            class="row register"
          >
            <p>
              REGISTER_BTN_LBL
            </p>
            <a
              class="button full"
              href="/default/registration"
            >
              REGISTER_BTN_TXT
            </a>
          </div>
        </div>
      </form>
      <div
        class="side-column contact"
      >
        <div
          class="inner"
        />
      </div>
    </div>
  </div>
</div>
`;
